# routes.js
@@ -19,16 +19,16 @@ export const routes = (app) => {
   * GICS
   ************************************************************************************************/
 
-  app.route('/api/v1/industry-classifications/gics/sectors')
+  app.route('/api/v1/ind-class/gics/sectors')
     .get(controllers.getSectors);
 
-  app.route('/api/v1/industry-classifications/gics/industry-groups')
+  app.route('/api/v1/ind-class/gics/industry-groups')
     .get(controllers.getIndustryGroups);
 
-  app.route('/api/v1/industry-classifications/gics/industries')
+  app.route('/api/v1/ind-class/gics/industries')
     .get(controllers.getIndustries);
 
-  app.route('/api/v1/industry-classifications/gics/subindustries')
+  app.route('/api/v1/ind-class/gics/subindustries')
     .get(controllers.getSubindustries);
 
   /************************************************************************************************
